--- a/WebGPT/Shared/Sidebar.razor
+++ b/WebGPT/Shared/Sidebar.razor
@@ -18,7 +18,7 @@
             WebGPT
         </h6>
         <p>
-            This is an Artificial Intelligence powered by OpenAI's GPT-3.5 API and integrated with Google Search API. It is capable of performing tasks similar to GPT-3.5 but provides more accurate and up-to-date answers based on real-time information from Google search results.
+            This is an Artificial Intelligence powered by OpenAI's GPT API and integrated with Brave Search API. It is capable of performing tasks similar to GPTs but provides more accurate and up-to-date answers based on real-time information from Brave search results.
         </p>
         <h6>
             Disclaimer
@@ -31,10 +31,10 @@
         </h6>
         <ul class="ps-4">
             <li>
-                <a class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="https://platform.openai.com/docs/guides/gpt/chat-completions-api" target="_blank">OpenAI's GPT-3.5 Turbo API</a>
+                <a class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="https://platform.openai.com/docs/guides/gpt/chat-completions-api" target="_blank">OpenAI's GPT-4 Turbo API</a>
             </li>
             <li>
-                <a class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="https://developers.google.com/custom-search/v1/overview" target="_blank">Google Search API</a>
+                <a class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="https://brave.com/search/api/" target="_blank">Brave Search API</a>
             </li>
             <li>
                 <a class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="https://docs.gitlab.com/ee/api/markdown.html" target="_blank">GitLab Markdown API</a>
